<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    tools:context=".Views.MainActivity">

    <org.osmdroid.views.MapView
        android:id="@+id/main_mapview"

        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/colorSecondary"

        android:layout_margin="8dp"

        app:layout_constraintTop_toTopOf="parent"
        />



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_go_to_murals"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"

        app:layout_constraintBottom_toBottomOf="@id/main_mapview"
        app:layout_constraintEnd_toEndOf="@id/main_mapview"

        android:text="@string/go_to_murals"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"

        android:backgroundTint="@color/colorPrimary"

        app:icon="@drawable/ic_img"
        app:iconTint="@color/colorWhite"
        app:iconSize="24dp"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_go_to_routes"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"

        app:layout_constraintBottom_toBottomOf="@id/main_mapview"
        app:layout_constraintEnd_toEndOf="@id/main_mapview"

        android:text="@string/go_to_routes"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"

        android:backgroundTint="@color/colorPrimary"

        app:icon="@drawable/ic_route"
        app:iconTint="@color/colorWhite"
        app:iconSize="24dp"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_extendMenu"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"

        app:layout_constraintBottom_toBottomOf="@id/main_mapview"
        app:layout_constraintEnd_toEndOf="@id/main_mapview"

        android:text="@string/menu"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"

        android:backgroundTint="@color/colorPrimary"

        app:icon="@drawable/ic_baseline_menu_24"
        app:iconTint="@color/colorWhite"
        app:iconSize="24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>