<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_mural"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/diff_s2"
                android:layout_marginTop="@dimen/diff_s2"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:background="@color/colorWhite"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mTextview_muralTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/diff_s2"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:text="Murals title PLCDHLDR"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_header1"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mTextview_muralsAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/diff_s2"

                    app:layout_constraintTop_toBottomOf="@id/mTextview_muralTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:text="Murals address PLCDHLDR"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_header3"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mTextview_muralsDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/diff_s2"

                    app:layout_constraintTop_toBottomOf="@id/mTextview_muralsAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:text="date PLCDHLDR"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_header3"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mTextview_description"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/diff_s3"

                    app:layout_constraintTop_toBottomOf="@id/mTextview_muralsDate"

                    android:text="@string/lorem"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mTextview_category"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/diff_s1"
                    android:layout_marginHorizontal="@dimen/diff_s1"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mTextview_description"

                    android:text="@string/category"
                    android:textSize="@dimen/font_header3"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mTextview_material"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/diff_s1"
                    android:layout_marginHorizontal="@dimen/diff_s1"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mTextview_category"

                    android:text="@string/material"
                    android:textSize="@dimen/font_header3"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mTextview_author"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/diff_s2"
                    android:paddingBottom="@dimen/diff_s3"

                    app:layout_constraintTop_toBottomOf="@id/mTextview_material"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:text="AUTHOR PLACEHOLDER"
                    android:textSize="@dimen/font_header3"
                    android:textColor="@color/colorPrimary"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_muralImages"
                android:layout_width="0dp"
                android:layout_height="650dp"
                android:layout_marginHorizontal="@dimen/diff_s2"
                android:layout_marginBottom="@dimen/diff_s2"

                app:layout_constraintTop_toBottomOf="@id/constraintLayout_mural"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:background="@color/colorOffWhite"

                tools:listitem="@layout/image_item_mural"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_nav"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/diff_s3"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:backgroundTint="@color/colorSecondary"
        app:icon="@drawable/ic_nav"
        app:iconTint="@color/colorWhite"
        app:iconSize="@dimen/font_header1"


        />

</androidx.constraintlayout.widget.ConstraintLayout>